# AIKON-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
.agents/skills/git-commit/: SKILL.md
.agents/skills/resolve-reviews/: SKILL.md
.agents/skills/start-issue/: SKILL.md
.agents/skills/write-pr/: SKILL.md
.claude/: settings.json
.claude/commands/: git-commit.md  resolve-reviews.md  start-issue.md  write-pr.md
.claude/hooks/: postToolUse.sh  preToolUse.sh  stop.sh
.claude/hooks/modules/ruff/: postToolUse.sh
.claude/rules/: async-conventions.md  commit-conventions.md  python-style.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/resolve-reviews/: SKILL.md
.claude/skills/start-issue/: SKILL.md
.claude/skills/write-pr/: SKILL.md
.codex/: config.toml  hooks.json
.codex/hooks/: post-tool-use.sh  pre-tool-use.sh
.codex/hooks/modules/command-guard/: pre-tool-use.sh
.github/workflows/: ci.yml
app/api/admin/: __init__.py  metrics.py
app/api/ai/: __init__.py  avatar_generations.py  datasets.py  feedbacks.py
app/api/v1/: __init__.py  chat.py
app/core/: config.py
app/db/: database.py  models.py  vector_store.py
app/schemas/: avatar.py  dataset.py  feedback.py  metrics.py
app/services/: avatar_job_processor.py  callback.py  dataset_export.py  embedding.py  feedback_pipeline.py  gemini.py  gemini_image.py  prompt.py  rag.py  s3.py
tests/: conftest.py  test_admin_metrics.py  test_avatar_generations.py  test_callback.py  test_dataset_export.py  test_feedback_rag.py  test_gemini_services.py  test_prompt.py
(+2 files in other folders)
