[project]
name = "aikon-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "google-generativeai>=0.8.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "google-genai>=1.0.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "moto[s3]>=5.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"app/services/prompt.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
